# fastapi-boilerplate

./: .env  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  babel.py  docker-compose.yml  fabfile.py  manage.py  prestart.sh  pyproject.toml  tests-start.sh  worker-start.sh
.github/ISSUE_TEMPLATE/: fastapi-boilerplate-feature-request.md  fastapi-boilerplate-issue.md
alembic/: env.py
app/core/: celery_app.py  config.py
compose/dev/: dev.yml
compose/local/: local.yml
compose/production/: prod.yml
core/: admin.py  application.py  cache.py  logger.py  router.py  routes.py  setup.py  storage.py
core/command/: base.py  command.py
core/db/: database.py
core/easy_router/: app_config.py  base_cbv.py  initializer.py  route.py
core/settings/: __init__.py  base.py  dev.py  local.py  production.py  staging.py
docker/: backend.dockerfile  celeryworker.dockerfile
src/: babel.py  main.py
src/admin/: __init__.py  auth.py  views.py
src/app/: __init__.py  health.py  main.py
src/core/: logging.py  pagination.py  rate_limit.py  security.py  setup.py
src/management/: runner.py
src/migrations/: env.py
src/models/: user.py
src/scripts/: create_first_superuser.py  create_first_tier.py  create_superuser.py  shell.py
src/tasks/: __init__.py  emails.py  settings.py
src/utils/: authentication.py  constants.py  dependencies.py  email.py  mail.py  models.py  otp.py  (+3 more)
tests/: conftest.py  helpers.py  test_auth.py  test_health.py  test_user.py
(+73 files in other folders)
