[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.1"
python-multipart = "^0.0.6"
email-validator = "^2.0.0"
requests = "^2.28.2"
celery = "^5.2.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.2"
pydantic = "^1.10.7"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
redis = "^4.5.4"
psycopg2-binary = "^2.9.6"
click ="^8.1.3"
alembic = "^1.10.3"
sqlalchemy = "^2.0.9"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"
pytest = "^7.3.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=1.4.2"]
build-backend = "poetry.masonry.api"

